# ChangeLog for dev-ruby/do_sqlite3
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Nov 2013; Peter Wilmott <p@p8952.info> do_sqlite3-0.10.13.ebuild:
  dev-ruby/do_sqlite3: Unset doc task and remove dependency on rake-compiler

*do_sqlite3-0.10.13 (29 Oct 2013)

  29 Oct 2013; Peter Wilmott <p@p8952.info> +do_sqlite3-0.10.13.ebuild,
  +files/do_sqlite3.gemspec, +metadata.xml:
  dev-ruby/do_sqlite3: Initial commit, dependency for datamapper(dm)-1.2.x